# jazz-graph

./: .example.env  .gitignore  LICENSE  README.md  create-artist-nodes.py  create-release-nodes.py  create-work-nodes.py  cypher-shell.md  import-cypher.sh  kind-of-blue-data.cql  pyproject.toml  shortest-path.json
cql/: amazing-bud-powell-data.cql  andrew-hill-black-fire.cql  andrew-hill-smoke-stack.cql  archie-shepp-the-way-ahead.cql  avishai-cohen-introducing-triveni.cql  bill-evans-in-norway-the-kongsberg-concert.cql  bobby-hutcherson-stick-up.cql  bravo-brubeck.cql  brubeck-all-the-things-we-are.cql  bud-powell-spring-broadcasts-1953.cql  bud-powell-winter-broadcasts-1953.cql  busmans-holiday.cql  charlie-parker-bird-at-st-nicks-vol1.cql  chick-corea-live-in-montreux.cql  chick-corea-now-he-sings.cql  chick-corea-remembering-bud-powell.cql  chick-corea-trio-music.cql  cracklin-data.cql  cymbalism-data.cql  cymbalism.cql  danilo-perez-panamonk.cql  duke-jordan-osaka-concert-vol-2.cql  eric-dolphy-far-cry.cql  eric-dolphy-outward-bound.cql  eric-dolphy-outward-boundd.cql  fountain-of-youth.cql  gary-burton-like-minds.cql  getz-jazz-goes-to-college.cql  hawes-live-at-the-jazz-showcase-vol-1.cql  horace-silver-and-the-jazz-messengers.cql  jaki-byard-heres-jaki.cql  jason-moran-artist-in-residence.cql  john-coltrane-dear-old-stockholm.cql  just-us-data.cql  kenny-barron-music-for-violin-and-jazz-quartet.cql  kenny-barron-wanton-spirit.cql  kind-of-blue-data.cql  mark-isaacs-encounters.cql  mary-lou-williams-a-grand-night-for-swinging.cql  miles-davis-kind-of-blue.cql  (+39 more)
(+102 files in other folders)
